@@ -1,5 +1,8 @@
 2004-10-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/phrasing-slur-engraver.cc (acknowledge_grob): do something
+	with normal slurs too.
+
 	* lily/slur-scoring.cc (move_away_from_staffline): new function.
 	(get_base_attachments): move away attachment point for breaks
 	similar to attachment points on slurs (staffline collision, and
